fixed cross browser aligning item thing and also view polls section :sparkles:

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -26,6 +26,7 @@ h3,
 p {
   margin: 0;
   padding: 0;
+  text-align: center;
 }
 
 h2 {
